# drowning-detetion

./: .gitignore  .pre-commit-config.yaml  README.md  artifacts.dvc  checkpoints.dvc  data.py  main.py  pyproject.toml  utils.py
.dvc/: config
conf/: config.yaml
conf/data/: default.yaml
conf/infer/: default.yaml
conf/model/: default.yaml
conf/onnx/: default.yaml
conf/train/: default.yaml
data/: .gitignore  archive.dvc  models.dvc  yolov5nu.pt.dvc
drowning-detection/: data.py  infer.py  main.py  model.py  myutils.py  onnx_export.py  train.py
