[project]
name = "drowning-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "dvc[s3]>=3.67.1",
    "hydra-core>=1.3.2",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "lightning>=2.6.1",
    "mlflow>=1.27.0",
    "pandas>=3.0.2",
    "pathlib>=1.0.1",
    "pre-commit>=4.6.0",
    "prettier>=0.0.7",
    "protobuf<5.0.0",
    "pycocotools>=2.0.11",
    "ruff>=0.15.12",
    "seaborn>=0.13.2",
    "torch>=2.11.0",
    "torchmetrics>=1.9.0",
    "torchvision>=0.26.0",
    "ultralytics>=8.4.48",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
